WebKit ignores column-rules wider than column-gap https://bugs.webkit.org/show_bug.cgi?id=15553

Paint column rules even if they are wider than the gap.
Rules wider than the gap should just overlap with column contents.

Patch by Morten Stenshorne <mstensho@opera.com> on 2013-02-13
Reviewed by Eric Seidel.

Source/WebCore:

Test: fast/multicol/rule-thicker-than-gap.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintColumnRules):

LayoutTests:

* fast/multicol/rule-thicker-than-gap-expected.html: Added.
* fast/multicol/rule-thicker-than-gap.html: Added.

Canonical link: https://commits.webkit.org/127990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142770 268f45cc-cd09-0410-ab3c-d52691b4dbfc